file-upload: using OSGi R7 multipart annotation